image on safari issue

--- a/css/main.css
+++ b/css/main.css
@@ -347,7 +347,7 @@ footer {
 .sketches {
   display: block;
   margin: 0 auto;
-  width: 20%;
+  width: 50%;
 }
 
 .width-1 {
